Move down to prevent covering the login button on some screen sizes

--- a/MyLSB/wwwroot/scss/_general.scss
+++ b/MyLSB/wwwroot/scss/_general.scss
@@ -117,7 +117,7 @@ div.disclosure {
 
 #broker-check {
     position: fixed;
-    top: 190px;
+    top: 272px;
     right: 16px;
     z-index: 700000;
     display: block;
